crates/truth-catalog/tests/compile_fail/bare_str_not_truth_key.rs
//! Guard: bare &str cannot be coerced to &TruthKey.
fn main() {
    let _: &truth_catalog::TruthKey = "qualify-inbound-lead";
}
