crates/truth-catalog/tests/compile_fail/bare_str_not_truth_key.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/bare_str_not_truth_key.rs:3:39
  |
3 |     let _: &truth_catalog::TruthKey = "qualify-inbound-lead";
  |            ------------------------   ^^^^^^^^^^^^^^^^^^^^^^ expected `&TruthKey`, found `&str`
  |            |
  |            expected due to this
  |
  = note: expected reference `&TruthKey`
             found reference `&'static str`
